--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -11,7 +11,19 @@ services:
     ports:
         - "5432:5432"
     volumes:
-      - postgres_catalog:/var/lib/postgresql/data/     
+      - postgres_catalog:/var/lib/postgresql/data/ 
+      
+  basketdb:
+    container_name: basketdb
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=BasketDb
+    restart: always
+    ports:
+        - "5433:5432"
+    volumes:
+      - postgres_basket:/var/lib/postgresql/data/ 
 
   catalog.api:
     environment:
